# VoterData

./: CMakeLists.txt  CreateCD1.cpp  CreateJSON.cpp  Insert.cpp  Stats.cpp  Stats.h  Voter.cpp  Voter.h  create_json_test.ini  insert.ini  insert_test.ini  stats.ini  stats_test.ini  voter.ini  voter_test.ini
gnuplot/: script.gnu  script_age.gnu
sqls/: AgeFunc.sql  CreateVotersCD1_24.sql  CreateVotersCD2_24.sql  JSONvoterhis.sql  create_CD1_2019.sql  create_active.sql  create_table_CD1_2018.sql  create_table_CD1_2018test.sql  create_table_CD1_2020.sql  create_table_CD1_2020_noVhist.sql  create_table_Suffolk_2019.sql  create_table_Suffolk_noVhist_2019.sql  create_vhist.sql  create_ward4.sql  create_ward4active.sql  people_CD1_2018.sql  people_CD1_24.sql  people_CD2_24.sql  show_create_table_CD1_2018.sql  show_create_table_CD1_2018sem.sql
